<resources>
    <string name="app_name">SoluEmergencias</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_hay_internet">No tienes internet por lo que no podras usar la app.</string>
    <string name="login_error_campos_vacios">Debes completar ambos campos antes de iniciar sesión</string>
    <string name="login_error_credenciales_incorrectas">Usuario y/o contraseña erroneos.</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="loading">Cargando</string>
    <string name="logo_abastible">Logo_app</string>
    <string name="logo_jorge_gas">Logo app</string>
    <string name="enviarMensaje">Enviar mensaje</string>
    <string name="olvidaste_tu_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="mail">Mail</string>
    <string name="contraseña">Contraseña</string>
    <string name="solu_emergencias">SoluEmergencias</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="nombrecompleto">Nombre y Apellidos</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="confirmar_password">Reingresa la contraseña</string>
    <string name="perfil">Perfil</string>
    <string name="volver">Volver</string>
    <string name="confirmar">Confirmar</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="error_al_crear_cuenta_firestore">Error al crear la cuenta, intente de nuevo con un nuevo mail.</string>
    <string name="error_al_crear_cuenta_fireauth">Error al crear la cuenta, intente de nuevo.</string>
    <string name="ver_aquí">Ver Aquí</string>
    <string name="jorgegas">JorgeGas</string>
    <string name="app">app</string>
    <string name="version">Vers. 1.10</string>
    <string name="gestion_de_volanteros">Gestion de volanteros</string>
    <string name="asistencia">Asistencia</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="primeros_pasos">Primeros pasos</string>
    <string name="primeros_pasos_pregunta">¿Primeros pasos?</string>
    <string name="primeros_pasos_pregunta_contenido">¡Revisa nuestra sección de preguntas  frecuentes!</string>
    <string name="registro_trayecto_volanteros">Registro de volanteros</string>
    <string name="proxima_funcionalidad">Esta funcionalidad se implementará en un futuro.</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="modo_claro">Modo Claro</string>
    <string name="acerca_de">Acerca de</string>
    <string name="error_al_logear_en_firebaseauth">Hubo un problema con firebase. comuniquese con su administrador.</string>
    <string name="login_error_no_hay_usuarios_en_firestore">Error al conectarse con firestore. intentelo nuevamente</string>
    <string name="sesion_activa_existente">Su cuenta ya esta activa en otro celular.</string>
    <string name="rut">Rut</string>
    <string name="permission_denied_explanation">Haz click en settings para otorgar el permiso de localización.</string>
    <string name="settings">Settings</string>
    <string name="aviso_de_permiso">SoluEmergencias necesita el permiso de localización para obtener tu ubicación en el momento que llames por una emergencia con el objetivo de compartirla si así la emergencia lo requierese.</string>
    <string name="permiso_de_ubicacion">Permiso de ubicación</string>
    <string name="falto_foto">Debes tomarte una foto para crear tu usuario.</string>
    <string name="email_en_uso">El email ingresado ya esta en uso.</string>
    <string name="error_al_crear_usuario_en_firebase_auth">En estos momentos no se puede crear la cuenta. Intentelo mas tarde</string>
    <string name="usuario_creado_con_exito">La cuenta ha sido creada con éxito.</string>
    <string name="rut_ya_esta_en_uso">El rut ingresado ya esta en uso.</string>
    <string name="rut_no_encontrado_en_la_base_de_datos">El rut ingresado no esta asociado a ninguna cuenta. Revisa e intentalo nuevamente.</string>
    <string name="usuario_ya_tiene_sesion_activa">Su sesión se encuentra activa en otro celular. Cierre sesión  e intentelo nuevamente.</string>
    <string name="error_al_obtener_usuarios_en_firestore">Error al obtener usuarios en firestore</string>
    <string name="error_al_iniciar_sesion_en_firebase_auth">Error al iniciar sesión con firebase Auth</string>
    <string name="vista_general">Vista General</string>
    <string name="registro">Registro</string>
    <string name="error_logout">No se pudo cerrar sesión, Compruebe su conexión a internet.</string>
    <string name="contactos_de_asistencia">Contactos de asistencia</string>
    <string name="crear_contacto_de_asistencia">Crear contacto de asistencia</string>
    <string name="ingresar_asesor_a">Ingresar Asesor/a</string>
    <string name="descripcion_vincular_cuentas">Para vincular su hogar con algun Asesor/a del hogar, ingrese el rut de este para enviarle una solicitud de vínculo</string>
    <string name="error_al_intentar_obtener_la_lista_de_usuarios_desde_la_nube">Error al obtener datos desde la nube</string>
    <string name="vincular_cuentas">Vincular Cuentas</string>
    <string name="vistageneral_ui_duenodecasa_header">Aquí podrás ver todas las emergencias ocurridas en tu hogar</string>
    <string name="solicitudes_por_aprobar">Solicitudes recibidas</string>
    <string name="error_cloud_request">No se pudieron obtener los datos desde la nube. Intentelo Nuevamente.</string>
    <string name="en_estos_momentos_no_tienes_solicitudes_pendientes">En estos momentos no tienes solicitudes pendientes</string>
    <string name="por_aprobar">Por aprobar</string>
    <string name="atencion">Atención</string>
    <string name="vincular_cuentas_solicitar_confirmacion">¿Estas seguro de que deseas enviar una solicitud a este rut?</string>
    <string name="vincular_cuentas_solicitar_exito">Solicitud de vinculación enviada exitosamente.</string>
    <string name="rut_invalido">El rut ingresado no es valido.</string>
    <string name="solicitud_ya_existente">Según nuestros registros ya haz solicitado una vinculación a este rut por lo que debes esperar a que el usuario te acepte o rechace dicha solicitud antes de enviar una nueva.</string>
    <string name="error_crear_solicitud">Ha ocurrido un error al crear la solicitud. Intentelo nuevamente.</string>
    <string name="solicitud_creada">La solicitud ha sido creada con éxito.</string>
    <string name="exito">La tarea ha sido completada con éxito.</string>
    <string name="no_hay_solicitudes_por_aprobar">En estos momentos no tienes solicitudes pendientes.</string>
    <string name="usuario_asesora_no_existe">El rut ingresado no esta asociado a ninguna cuenta de asesora del hogar.</string>
    <string name="usuario_dueñodecasa_no_existe">El rut ingresado no esta asociado a ninguna cuenta de dueño de casa.</string>
    <string name="error_al_crear_usuario_en_firestore">Error al crear usuario en firestore.</string>
    <string name="usuario_o_contraseña_erroneos">Usuario y/o contraseña invalidos</string>
    <string name="solicitud_aprobada">La solicitud ha sido aprobada con éxito.</string>
    <string name="solicitud_rechazada">La solicitud ha sido rechazada con éxito.</string>
    <string name="error_actualizar_foto_perfil">Error al actualizar la foto de perfil.</string>
    <string name="solicitudes_enviadas">Solicitudes enviadas</string>
    <string name="rut_sin_puntos_ni_guion">Ingrese rut sin puntos no guión</string>
    <string name="contacto_emergencia">Contacto de emergencia</string>
    <string name="llamar">Llamar</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="contactos_de_emergencia">Contactos de emergencia</string>
    <string name="agenda">Agenda</string>
    <string name="crear_contacto">Crear contacto</string>
    <string name="registro_de_actividad">Registro de actividad</string>
    <string name="adjuntar_foto">Adjuntar foto (Si se requiere)</string>
    <string name="formulario_incompleto">Debes de completar todos los campos antes de confirmar</string>
    <string name="recuperar_clave">Recuperar clave</string>
    <string name="ingrese_rut">Ingrese su rut</string>
    <string name="escriba_sugerencias">Si tienes alguna observación u comentario, escribelo aquí y te responderemos en cuanto podamos.</string>
    <string name="tus_solicitudes_enviadas_han_sido_gestionadas">Tus solicitudes enviadas ya han sido gestionadas.</string>
    <string name="rut_del_receptor">Rut del receptor</string>
    <string name="nombre_del_receptor">Nombre del receptor</string>
    <string name="fecha_de_solicitud">Fecha de solicitud</string>
    <string name="solicitud_gestionada">Solicitud gestionada</string>
    <string name="estado_solicitud">Estado de la solicitud</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="nombre_del_solicitante">Nombre del solicitante</string>
    <string name="rut_del_solicitante">Rut del solicitante</string>
    <string name="aprobar">Aprobar</string>
    <string name="rechazar">Rechazar</string>
    <string name="fragment_vista_general">VistaGeneralFragment</string>
    <string name="apariencia">Apariencia</string>
    <string name="datos_editables_de_la_cuenta">Datos editables de la cuenta</string>
    <string name="actualizar_datosA">Actualizar datos</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="datos_actualizados">Los datos han sido actualizados.</string>
    <string name="actualizar_campos_check">Para actualizar tus datos debes de cambiar a lo menos un campo.</string>
    <string name="confirmar_password_2">Reingresar \ncontraseña</string>
    <string name="datos_editables_de_la_perfil">Datos editables del perfil</string>
    <string name="actualizar_password">Actualizar contraseña</string>
    <string name="actualizar_datos_consulta">¿Estas seguro que quieres actualizar tus datos?</string>
    <string name="actualizar_password_check">No puedes usar tu misma contraseña como una nueva.</string>
    <string name="password_no_coinciden">Las contraseñas no coinciden</string>
    <string name="actualizar_password_consulta">¿Estas seguro que quieres actualizar tu contraseña?</string>
    <string name="error_al_cambiar_password_en_firestore">Ha ocurrido un error al actualizar su contraseña.</string>
    <string name="actualizar_clave_check">Para actualizar la clave debes completar ambos cambos</string>
    <string name="agregar_contacto_de_emergencia">Agregar contacto de emergencia</string>
    <string name="fotoPerfil">Foto de perfil</string>
    <string name="desvincular">Desvincular</string>
    <string name="contorno_del_logo">Contorno del logo</string>
    <string name="nombre">Nombre</string>
    <string name="cuenta_no_vinculada">Tu cuenta no esta vinculada a ningún rut.</string>
    <string name="exito_cuenta_desvinculada">Cuenta desvinculada con éxito.</string>
    <string name="contacte_administrador">Error. \nContacte administrador</string>
    <string name="registrar_comentarios_de_la_emergencia">Registrar comentarios de la emergencia</string>
    <string name="ingresa_observaciones">Observaciones</string>
    <string name="Cancelar">cancelar</string>
    <string name="Guardar">Guardar</string>
</resources>