<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_authentication_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/space_biggest"
        android:text="@string/solu_emergencias"
        android:textColor="@color/azulMarino"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="@dimen/font_title"
        />


    <ImageView
        android:id="@+id/imageview_logoSoluEmergencias"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_authentication_titulo"
        android:layout_marginTop="@dimen/space_big"
        android:src="@drawable/app_logo"
        android:contentDescription="@string/logo_abastible"
         />

    <TextView
        android:id="@+id/textView_authentication_inicieSesion"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageview_logoSoluEmergencias"
        android:layout_marginTop="@dimen/space_big"
        android:text="¡Hola, antes de empezar, inicie sesión!"
        android:textColor="@color/azulMarino"
        android:textSize="19sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edittext_rut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_bigger"
        android:layout_marginEnd="@dimen/space_bigger"
        android:layout_marginTop="@dimen/space_big"
        android:background="@drawable/edittext_border"
        android:autofillHints="email"
        android:hint="@string/rut"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:drawableStartCompat="@drawable/ic_baseline_person_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_authentication_inicieSesion"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_bigger"
        android:layout_marginEnd="@dimen/space_bigger"
        android:layout_marginTop="@dimen/space_small"
        android:padding="10dp"
        android:background="@drawable/edittext_border"
        android:autofillHints="contraseña"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        app:drawableStartCompat="@drawable/ic_baseline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_rut"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/azulMarino"
        android:text="@string/button_login"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_password"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="@dimen/space_small"
        />

    <TextView
        android:id="@+id/textView_authentication_claveOlvidada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/login_button"
        android:text="@string/olvidaste_tu_contrasenia"
        android:textColor="@color/azulMarino"
        android:layout_marginTop="@dimen/space_small"
        />

    <TextView
        android:id="@+id/textView_authentication_necesitasUnaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_button"
        app:layout_constraintTop_toBottomOf="@id/textView_authentication_claveOlvidada"
        android:text="@string/no_tienes_cuenta"
        android:layout_marginStart="@dimen/space_bigger"
        android:layout_marginTop="@dimen/space_bigger"
        />

    <TextView
        android:id="@+id/textView_authentication_crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/textView_authentication_necesitasUnaCuenta"
        app:layout_constraintTop_toBottomOf="@id/textView_authentication_claveOlvidada"
        android:text="@string/crear_cuenta"
        android:textColor="@color/azulMarino"
        android:layout_marginTop="@dimen/space_bigger"
        android:layout_marginStart="@dimen/space_small"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:indeterminate="true"
        android:contentDescription="@string/loading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:progressDrawable="@color/orange"
        android:visibility="gone"
        />



</androidx.constraintlayout.widget.ConstraintLayout>