<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.soluemergencias.ui.vistageneral.VistaGeneralViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_vistaGeneral_uiDuenoDeCasa_titulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vista_general"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/space_big"
            />

        <TextView
            android:id="@+id/textView_vistaGeneral_uiDuenoDeCasa_descripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_vistaGeneral_uiDuenoDeCasa_titulo"
            android:text="@string/vistageneral_ui_duenodecasa_header"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/space_big"
            android:layout_marginHorizontal="@dimen/space_big"
            android:background="@drawable/border_item_listado_asistencia"
            android:padding="@dimen/space_small"
            />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider_vincularCuentas_dividerTop"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView_vistaGeneral_uiDuenoDeCasa_descripcion"
            android:layout_marginTop="@dimen/space_medium"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider_vincularCuentas_dividerTop"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <ProgressBar
            android:id="@+id/circularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:contentDescription="@string/loading"
            app:cloudRequestStatusCircularProgress="@{viewModel.status}"
            app:layout_constraintStart_toStartOf="@+id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:layout_constraintEnd_toEndOf="@id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:layout_constraintTop_toTopOf="@id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:layout_constraintBottom_toBottomOf="@id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            />

        <ImageView
            android:id="@+id/imageView_vincularCuentas_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:layout_constraintEnd_toEndOf="@id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:layout_constraintTop_toTopOf="@id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:layout_constraintBottom_toBottomOf="@id/recyclerview_vistaGeneral_uiDuenoDeCasa_listadoDeEmergencias"
            app:cloudRequestStatusImage="@{viewModel.status}"
            android:src="@drawable/ic_connection_error_100"
            android:contentDescription="@string/error_al_intentar_obtener_la_lista_de_usuarios_desde_la_nube" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>