<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include
            android:id="@+id/fragment_base_interface"
            layout="@layout/fragment_base_interface"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_view"/>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:menu="@menu/navdrawer_menu"
            app:headerLayout="@layout/drawer_nav_header">

            <!--Footer del NavDrawer-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/drawerNavFooter"
                android:layout_gravity="bottom"
                >
                <ImageView
                    android:id="@+id/imageView_footer_logo"
                    android:layout_height="50dp"
                    android:layout_width="50dp"
                    android:layout_marginStart="@dimen/space_big"
                    android:layout_marginVertical="@dimen/space_big"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@drawable/app_logo"
                    android:contentDescription="@string/logo_jorge_gas"
                    />

                <TextView
                    android:id="@+id/textView_footer_jorgeGas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_small"
                    app:layout_constraintStart_toEndOf="@+id/imageView_footer_logo"
                    app:layout_constraintTop_toTopOf="@+id/imageView_footer_logo"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView_footer_logo"
                    android:text="@string/solu_emergencias"
                    android:textAppearance="?attr/textAppearanceHeadline6"/>

                <TextView
                    android:id="@+id/textView_footer_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView_footer_logo"
                    app:layout_constraintTop_toBottomOf="@+id/textView_footer_jorgeGas"
                    android:text="@string/version" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.navigation.NavigationView>
    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
